--- a/Livre de Criar e Escrever.css
+++ b/Livre de Criar e Escrever.css
@@ -1,6 +1,7 @@
 *{
     margin: 0;
     padding: 0;
+    font-family: 'Pattaya', sans-serif;
 
 }
 
@@ -10,5 +11,38 @@
         background-image: linear-gradient(rgba(8, 44, 204, 0.041),rgba(8, 44, 204, 0.041)), url(img/alfons-morales-ylswjsy7stw-unsplash.jpg);
         background-position: center;
         background-size: cover;
-        position: relative
+        position: relative;
+}
+
+nav{
+        display: flex;
+        padding: 2% 6%;
+        justify-content: space-between;
+        align-items: center;
+}
+
+nav img{
+         width: 150px;
+
+}
+
+.nav-links{
+           flex: 1;
+           text-align: right; 
+
+}
+
+.nav-links ul li{
+            list-style: none;
+            display: inline-block;
+            padding: 8px 12px;
+            position: relative;
+
+}
+
+.nav-links ul li a{
+                color: white;
+                text-decoration: none;
+                font-size: 13px;
+
 }
