--- a/Livre de Criar e Escrever.css
+++ b/Livre de Criar e Escrever.css
@@ -43,6 +43,23 @@ nav img{
 .nav-links ul li a{
                 color: white;
                 text-decoration: none;
-                font-size: 13px;
+                font-size: 25px;
+
+}
+
+.nav-links ul li::after{
+                content: '';
+                width: 0%;
+                height: 2px;
+                background: white;
+                display: block;
+                margin: auto;
+                transition: 0.5s;
+
+}
+
+.nav-links ul li:hover::after{
+                width: 100%;
+
 
 }
