--- a/Livre de Criar e Escrever.css
+++ b/Livre de Criar e Escrever.css
@@ -63,3 +63,36 @@ nav img{
 
 
 }
+
+.text-box{
+        width: 90%;
+        color: white;
+        position: absolute;
+        top: 50%;
+        left: 50%;
+        transform: translate(-50%,-50% );
+        text-align: center;
+        font-size: 30px;
+
+}
+
+.text-box p{
+        margin: 10px 0 40px;
+}
+
+.hero-btn{
+        display: inline-block;
+        text-decoration: none;
+        color: white;
+        border: 3px solid white;
+        padding: 12px 34px;
+        border-radius: 50px;
+        background: transparent;
+        position: relative;
+        cursor: pointer;
+}
+
+.hero-btn:hover{
+        background: gray;
+        transition: 1s;
+}
